Changelog
=========

1.6.3 - Unreleased
------------------

- Update styles for CloudCast actions toolbar.
  [Vitaliy Podoba]

- Added styles for cloudcast message actions.
  [Taras Melnychuk]

- Customize validate_integrity.vpy* scripts to allow redirect from event
  subscribers. We need it to redirect to Cast Invite screen upon creation.
  [Vitaliy Podoba]


1.6.2 - September 25, 2012
--------------------------

- Hide cloud tag if user is anonymous.
  [Jose Dinuncio]

- Fixes event creation in root bug.
  [Jose Dinuncio]

- Fixed rooms participants list.
  [Taras Melnychuk]

- Leave room on page reload.
  [Taras Melnychuk]

- Fixed room rejoin.
  [Taras Melnychuk]

- Unescaped nick name for room participant,
  muc plugin escapes it for us.
  [Taras Melnychuk]



1.6.1 - September 15, 2012
--------------------------

- Fixed bug with subscription request approval.
  [Taras Melnychuk]

- Optimized roster rendering (refactored chat initialization)
  [Taras Melnychuk]

- Reimplemented contact panel user interface, make it more user friendly
  [Taras Melnychuk]

- Style new chat contacts list functionality.
  [Vitaliy Podoba]

- Adopt mark_special_links.js script for new jquery 1.7.2 version.
  [Vitaliy Podoba]

- Style commenting form.
  [Vitaliy Podoba]

- Add .strip method to js String class.
  [Vitaliy Podoba]

- Sets a better handling for redirection when creating tickets.
  [Jose Dinuncio]
>>>>>>> 15cbb36c1d58ede46c743b4f44e53f747c6039f4

- Fixed member data fetch for roster items.
  [Taras Melnychuk]

1.6.0 - September 6, 2012
-------------------------

- Implement First Version of XMPP Chat Viewlet.
  [Vitaliy Podoba, Taras Melnychuk]

- Fix Create Tasks to redirect to default view.
  [Jose Dinuncio]

- Fix OpenERP portlet look and feel.
  [Jose Dinuncio]

1.5.4 - August 29, 2012
-----------------------

- Fix popupforms.js selector. Should now work with newer jquery version.
  [Vitaliy Podoba]

- Add mail notification for plone.app.discussion.