@@ -18,9 +18,11 @@
   <adapter name="avg_ratings" factory=".indexers.avg_ratings" />
   <adapter name="total_down_ratings" factory=".indexers.total_down_ratings" />
 
-  <utility
-      provides="plone.app.users.userdataschema.IUserDataSchemaProvider"
-      factory=".userdataschema.UserDataSchemaProvider"/>
+  <adapter factory=".userdataschema.UserDataSchemaAdapter"
+           name="theme_userdatascheme.ExtraField"/>
+
+  <adapter factory=".userdataschema.UserDataSchemaPropertiesAdapter"
+           name="theme_userdatascheme.ExtraProperties"/>
 
   <utility
       provides=".avatar.IAvatarUtil"
