@@ -1,10 +1,0 @@
-<configure
-    xmlns="http://namespaces.zope.org/zope"
-    xmlns:i18n="http://namespaces.zope.org/i18n"
-    i18n_domain="vnccollab.theme">
-
-  <utility
-      provides="plone.app.users.userdataschema.IUserDataSchemaProvider"
-      factory=".userdataschema.UserDataSchemaProvider"/>
-
-</configure>
