@@ -1,20 +1,41 @@
 from zope import schema
-from zope.interface import implements
+from zope.component import adapts
+from zope.interface import implements, Interface
+from zope.publisher.browser import IBrowserRequest
 
-from plone.app.users import userdataschema as base
+from collective.customizablePersonalizeForm.adapters.interfaces import \
+        IExtendedUserDataSchema, IExtendedUserDataPanel
 
 from vnccollab.theme import messageFactory as _
 
 
-class UserDataSchemaProvider(object):
-    implements(base.IUserDataSchemaProvider)
+class UserDataSchemaAdapter(object):
+    adapts(object, IBrowserRequest)
+    implements(IExtendedUserDataSchema)
+
+    def __init__(self, context, request):
+        self.context = context
+        self.request = request
 
     def getSchema(self):
-        """
-        """
         return IUserDataSchema
 
-class IUserDataSchema(base.IUserDataSchema):
+class UserDataSchemaPropertiesAdapter(object):
+    adapts(object, IBrowserRequest)
+    implements(IExtendedUserDataPanel)
+
+    def __init__(self, context, request):
+        self.context = context
+        self.request = request
+
+    def getProperties(self):
+        return ['zimbra_username', 'zimbra_password',
+                'etherpad_url', 'etherpad_username', 'etherpad_password',
+                'openerp_username', 'openerp_password',
+                'redmine_username', 'redmine_password'
+                ]
+
+class IUserDataSchema(Interface):
 
     zimbra_username = schema.ASCIILine(
         title=_("Zimbra Username"),
@@ -29,14 +50,14 @@ class IUserDataSchema(base.IUserDataSchema):
                       "related information, like mail box, calendar, contacts, "
                       "etc..."),
         required=False)
-    
+
     etherpad_url = schema.URI(
         title=_(u"Etherpad URL"),
         description=_(u"Root url to your Etherpad service. This field is "
             "usually useful in case every user got his own Etherpad url instead"
             " of using one global domain for all users."),
         required=False)
-    
+
     etherpad_username = schema.ASCIILine(
         title=_("Etherpad Username"),
         description=_(u"We need this field in order to display your Etherpad "
@@ -50,7 +71,7 @@ class IUserDataSchema(base.IUserDataSchema):
                       "related information, like single pad or whole list of "
                       "pads, etc..."),
         required=False)
-    
+
     openerp_username = schema.ASCIILine(
         title=_("OpenERP Username"),
         description=_(u"We need this field in order to display your OpenERP "
