@@ -4,6 +4,9 @@ Changelog
 1.6.3 - Unreleased
 ------------------
 
+- Modify userdataschema.py to use collective.customizablePersonalizeForm.
+  [Jose Dinuncio]
+
 - Update styles for CloudCast actions toolbar.
   [Vitaliy Podoba]
 
